$Id: ChangeLog 3947 2014-07-13 16:21:38Z chrfranke $

2014-07-13  Christian Franke  <franke@computer.org>

	atacmds.cpp: Add missing const and initialization.
	Don't print extra '\n' if self-test log is empty.
	ataprint.cpp: Add new ACS-4 log.
	cciss.cpp: Fix C++11 builds on Linux.  GCC and CLang do not
	predefine 'linux' when in '-std=c++11' mode.

2014-07-10  Christian Franke  <franke@computer.org>

	Makefile.am: Rework build of Solaris specific man pages.
	This fixes some bogus and some missing replacements.
	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Minor typo and syntax
	fixes.

2014-07-09  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Avoid '.SH' macros with no
	argument.  Remove colons from section names.
	Merge sections CONTRIBUTORS and CREDITS with AUTHORS.
	Update SEE ALSO sections.

2014-07-05  Christian Franke  <franke@computer.org>

	configure.ac: Remove snprintf() compile time test.
	Add '--with-working-snprintf' configure option.
	Add __USE_MINGW_ANSI_STDIO test for MinGW GCC.
	utility.cpp: Add snprintf() runtime test.
	Add GCC version to output of -V option.
	Makefile.am: Add update-smart-drivedb.1m for Solaris.

2014-06-30  Christian Franke  <franke@computer.org>

	configure.ac: Update macros as suggested by 'autoconf --warnings=obsolete'.
	Makefile.am: Add creation of empty directories to install targets.

2014-06-29  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am, smartd.cpp, smartd_warning.sh.in:
	Add '--with-smartdscriptdir' configure option to change location of
	smartd_warning.sh (Debian bug 710815).
	Add '--with-smartdplugindir' configure option to change (or disable)
	smartd_warning.sh plugin location.
	smartd.conf.5.in: Optionally hide the plugin documentation.

2014-06-27  Christian Franke  <franke@computer.org>

	Makefile.am: Add update-smart-drivedb.8 target.
	update-smart-drivedb.8.in: Add copyright and version info.
	Adjust path names for make target.