@@ -1,4 +1,4 @@
-$Id: ChangeLog 3947 2014-07-13 16:21:38Z chrfranke $
+$Id: ChangeLog 3948 2014-07-13 16:53:30Z chrfranke $
 
 2014-07-13  Christian Franke  <franke@computer.org>
 
@@ -7,6 +7,7 @@ $Id: ChangeLog 3947 2014-07-13 16:21:38Z chrfranke $
 	ataprint.cpp: Add new ACS-4 log.
 	cciss.cpp: Fix C++11 builds on Linux.  GCC and CLang do not
 	predefine 'linux' when in '-std=c++11' mode.
+	smartd.cpp: Update description of Windows smartd service.
 
 2014-07-10  Christian Franke  <franke@computer.org>
 
